[package]
name = "mmp"
version = "0.1.0"
authors = ["TA Thanh Dinh <tathanhdinh@gmail.com>"]
edition = "2018"

[dependencies]
gio = "0.5.1"
gtk = "0.5.0"
gtk-sys ="0.7.0"
gdk-pixbuf = "0.5.0"
id3 = "0.2.5"
crossbeam = "0.6.0"
pulse-simple = "1.0.1"
simplemad = "0.9.0"
libc = "0.2.45"
gstreamer = "0.12.2"